<!-- <package> -->
<package format="2">
  <name>image_pub_sub</name>
  <version>0.0.0</version>
  <description>image_pub_sub</description>
  <maintainer email="saadrockywebsite@gmail.com">Saad Naseer</maintainer>
  <license>Apache License 2.0</license>
<!--  <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
<!--  <build_depend>roscpp</build_depend> -->
<!--  <run_depend>roscpp</run_depend> -->
<!--  <run_depend>std_msgs</run_depend> -->
  <depend>rclcpp</depend>
  <!--depend>std_msgs</depend> -->
  <depend>cv_bridge</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
